--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,8 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  /* background-color: #282c34; */
+  background-color: #F1F1F1;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
